--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -1,13 +1,8 @@
 <div class="container">
   <div class="row row-cols-1 row-cols-md-3 g-4">
+  <h2>See all your orders</h2>
     <% @menu_items.each do |menu_item| %>
-      <div class="col">
-        <%= link_to menu_item_path(menu_item) do %>
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-            <%= menu_item.name %>
-          </div>
-        <% end %>
-      </div>
+      <%= render "menu_items/menu_item_card", menu_item: menu_item %>
     <% end %>
   </div>
 </div>
