--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -22,4 +22,14 @@
     <p>You have not been to <%= @place.name %> yet!</p>
   </div>
   <% end %>
+
+  <% if user_signed_in? && current_user == @place.user %>
+  <%= link_to "Edit", edit_place_path(@place), class: "btn btn-primary" %>
+
+ <%= link_to "Delete",
+  place_path(@place), class: "btn btn-danger",
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
+
+<% end %>
 </div>
