--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -92,6 +92,5 @@
     menu_item_path(@menu_item), class: "btn btn-danger",
     data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
   %>
-
-<%= end %>
+<% end %>
 </div>
