--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -28,8 +28,6 @@
 
  <%= link_to "Delete",
   place_path(@place), class: "btn btn-danger",
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-%>
-
-<% end %>
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
+  <% end %>
 </div>
