--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -39,6 +39,8 @@
       <p><strong>Review:</strong></p>
       <p><em><%= @menu_item.description %></em></p>
     </div>
+    <div class="card-end">
+      <a href="/dashboard" class="btn btn-ghost" role="button">Go to dashboard</a>
+    </div>
   </div>
-  <a href="/dashboard" class="btn btn-ghost" role="button">Go to dashboard</a>
 </div>
