--- a/app/views/menu_items/new.html.erb
+++ b/app/views/menu_items/new.html.erb
@@ -1,3 +1,4 @@
+<!--
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
@@ -5,7 +6,7 @@
         <%= simple_form_for([@place, @menu_item]) do |f| %>
           <div class="form-inputs">
             <%= f.input :name %>
-            <%= f.input :category %>
+            <%= f.input :category, collection: %w[Bakery\ item Beverage Dessert Main\ course Salad Sandwich/Wrap Side\ dish Snack Soup Starter Other] %>
             <%= f.input :price %>
             <%= f.input :visit_date %>
             <%= f.input :rating %>
@@ -13,9 +14,10 @@
             <%= f.input :photo, as: :file %>
           </div>
           <div class="form-actions">
-            <%= f.button :submit, "Create a menu item", class: "btn btn-ghost" %>
+            <%= f.button :submit, "Add", class: "btn btn-ghost" %>
           </div>
         <% end %>
     </div>
   </div>
 </div>
+-->
