--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <h2 style = "text-align: center;">Dashboard</h2>
-  
+
   <h5 style = "margin-bottom: 1px;">Places you have visited</h5>
   <div class="d-flex justify-content-end" style="position: relative;">
   <%= link_to places_path do %>
@@ -47,7 +47,7 @@
 
   <br>
 
-<h5 style = "margin-bottom: 1px;">your recent orders</h5>
+<h5 style = "margin-bottom: 1px;">Your recent orders</h5>
 <div class="d-flex justify-content-end" style="position: relative;">
   <%= link_to menu_items_path do %>
      See All  <i class="fa-solid fa-eye"></i>
