icon display changed

--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,5 +1,6 @@
 {
-  "background_color": "white",
+  "background_color": "rgb(168, 68, 72);",
+  "theme_color": "white",
   "description": "Historant is the first restaurant review app.",
   "display": "fullscreen",
   "name": "Historant",
