homepage is done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <img src="https://res.cloudinary.com/dwrkiuiqa/image/upload/v1678439564/Historant-logo-BIG-LOGO-WHITE_huxdwd.png" width="200" class="card-img-top" alt="Logo">
     <p>Forgot what you have already ordered once? Not anymore!</p>
-    <h3>Already a member? <%= link_to "Log in", user_session_path %> </h3>
-    <h3>New to Historant? <%= link_to "Sign up", new_user_registration_path %></h3>
+    <h3>Already a member? <%= link_to "Log in", user_session_path, class: "btn btn-ghost"%> </h3>
+    <h3>New to Historant? <%= link_to "Sign up", new_user_registration_path, class: "btn btn-ghost" %></h3>
   </div>
 </div>
