--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,11 @@
 // Specific CSS for your home-page
 .banner {
+  height: 100vh;
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  display: flex;
+  align-items: center;
 }
 
 .banner h1 {
@@ -25,4 +28,8 @@
   color: white;
   opacity: .9;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.banner .btn {
+  color: white;
 }
