added the form login in the login page, it worked

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,4 +6,5 @@
 @import "card_category";
 @import "button";
 @import "map";
-@import "address_autocomplete"
+@import "address_autocomplete";
+@import "form";
