--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,12 +1,23 @@
 <div class="container">
   <div class="card mt-3 text-center">
     <h1><%= @place.name %></h1>
-    <p><strong>Category: &nbsp</strong><%= @place.category %></p>
-    <% if @place.category == "Restaurant" %>
-      <p><strong>Cuisine: &nbsp</strong><%= @place.cuisine %></p>
-    <% end  %>
-    <p><strong>Address: &nbsp</strong><%= @place.address %></p>
+    <p><strong></strong><%= @place.cuisine %> <%= @place.category %></p>
+    <%# <% if @place.category == "Restaurant" %>
+      <%# <p><strong>Cuisine: &nbsp</strong><%= @place.cuisine %>
+    <%# <% end  %>
+    <p><strong><i class="fa-sharp fa-solid fa-location-dot"></i>  </strong><%= @place.address %></p>
   </div>
+
+    <div>
+    <% if user_signed_in? && current_user == @place.user %>
+    <%= link_to "Edit", edit_place_path(@place), class: "btn btn-primary" %>
+
+    <%= link_to "Delete",
+    place_path(@place), class: "btn btn-danger",
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
+  <% end %>
+    </div>
+    <br>
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <% if @place.menu_items.present? %>
@@ -19,12 +30,4 @@
     </div>
     <% end %>
   </div>
-
-  <% if user_signed_in? && current_user == @place.user %>
-    <%= link_to "Edit", edit_place_path(@place), class: "btn btn-primary" %>
-
-    <%= link_to "Delete",
-    place_path(@place), class: "btn btn-danger",
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
-  <% end %>
 </div>
