--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,18 +7,15 @@
       <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
       <%= render 'shared/ios_pwa_links' %>
 
-
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%# related to pwa %>
-     <meta name="apple-mobile-web-app-capable" content="yes">
-     <meta name="mobile-web-app-capable" content="yes">
-     <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="mobile-web-app-capable" content="yes">
+      <link rel="manifest" href="<%= asset_path 'manifest.json' %>">
       <%= render 'shared/ios_pwa_links' %>
-
 
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
@@ -36,5 +33,7 @@
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
-  </body>
+    <% unless @no_navbar %>
+      <%= render "shared/footer" %>
+    <% end %>  </body>
 </html>
