--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
+
 @import "config/bootstrap_variables";
 
 // External libraries
@@ -11,3 +12,9 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+body {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
