--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "footer";
 @import "card_category";
 @import "button";
 @import "map";
