--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,14 @@
     <p>Forgot what you have already ordered once? Not anymore!</p>
     <h3>Already a member? <%= link_to "Log in", user_session_path %> </h3>
     <h3>New to Historant? <%= link_to "Sign up", new_user_registration_path %></h3>
+
+    <div class="fixed-bottom text-center">
+      <a>Find us here: </i></a>
+      <a href="#"><i class="fab fa-github text-dark"></i></a>
+      <a href="#"><i class="fab fa-instagram text-dark"></i></a>
+      <a href="#"><i class="fab fa-facebook text-dark"></i></a>
+      contact@historant.de
+      Copyright <i class="fa-regular fa-copyright fs-6"></i> 2023 Historant
+    </div>
   </div>
 </div>
