changed place showpage

--- a/app/assets/stylesheets/components/_card_category.scss
+++ b/app/assets/stylesheets/components/_card_category.scss
@@ -15,3 +15,12 @@
 .card-link {
   text-decoration: none;
 }
+
+.place-info-card {
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-top: 8px;
+  margin-bottom: 8px;
+  text-align: center;
+  background-color: rgb(212, 212, 212);
+}
