--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,7 @@
 @import "components/index";
 @import "pages/index";
 
-
-body {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.container {
+  margin-top: 6rem;
+  margin-bottom: 6rem;
 }
