--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   justify-content: space-between;
-  background-color: #A84448;
+  background-color: $nav-foot;
 }
 
 .footer-brand img {
