--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,7 +1,7 @@
 .form {
   background: white;
   padding: 10px 20px;
-  margin-top: 30px;
+  margin-top: 0;
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
   h2 {
