--- a/app/views/menu_items/edit.html.erb
+++ b/app/views/menu_items/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-      <h2>Edit the menu item </h2>
+    <div class="form col-xs-12 col-sm-4 col-sm-offset-4">
+      <h2>Edit your review </h2>
       <%= simple_form_for([@place, @menu_item]) do |f| %>
         <div class="form-inputs">
           <%= f.input :name %>
