changed the layout a bit of restaurant showpage, not sure if it's completely done now

--- a/app/assets/stylesheets/components/_card_category.scss
+++ b/app/assets/stylesheets/components/_card_category.scss
@@ -20,7 +20,8 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-top: 8px;
-  margin-bottom: 8px;
-  text-align: center;
-  background-color: rgb(212, 212, 212);
+  margin-bottom: 16px;
+  background-color: white;
+  padding: 16px;
+  height: 180px;
 }
