--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,20 +1,22 @@
 <div class="container">
   <div class="place-info-card">
-    <h1><%= @place.name %></h1>
-    <p><strong></strong><%= @place.cuisine %> <%= @place.category %></p>
-    <%# <% if @place.category == "Restaurant" %>
-      <%# <p><strong>Cuisine: &nbsp</strong><%= @place.cuisine %>
-    <%# <% end  %>
-    <p><strong><i class="fa-sharp fa-solid fa-location-dot"></i>  </strong><%= @place.address %></p>
-    <div class= "icons">
-      <%= link_to edit_place_path(@place), class: "text-decoration-none text-dark" do %>
-        <i class="fa-regular fa-pen-to-square"></i>
-      <% end %>
-      <%= link_to place_path(@place), class: "text-decoration-none text-dark",
-      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} do %>
-        <i class="fa-solid fa-trash-can"></i>
-      <% end %>
+    <div class="d-flex justify-content-between">
+      <h2><%= @place.name %></h2>
+      <div class= "icons">
+        <%= link_to edit_place_path(@place), class: "text-decoration-none text-dark" do %>
+          <i class="fa-regular fa-pen-to-square"></i>
+        <% end %>
+        <%= link_to place_path(@place), class: "text-decoration-none text-dark",
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} do %>
+          <i class="fa-solid fa-trash-can"></i>
+        <% end %>
+      </div>
     </div>
+    <p><em><%= @place.cuisine %> <%= @place.category %></em></p>
+    <%# <% if @place.category == "Restaurant" %>
+      <%# <p><em>Cuisine: &nbsp</em><%= @place.cuisine %>
+    <%# <% end  %>
+    <p><i class="fa-sharp fa-solid fa-location-dot"></i>  <em><%= @place.address %></em></p>
   </div>
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
